--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tech Support</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,51 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <!-- login page -->
+      <h1>Tech Support</h1>
+        <p id="message"></p>
+      <h2>Sign-In</h2>
+    <form id="sign-in">
+      <input placeholder="Enter Email" type="email" name="credentials[email]">
+      <br>
+      <input placeholder="Enter Password" type="password" name="credentials[password]">
+      <br>
+      <button id='btnSignIn'>Sign In</button>
+    </form>
+
+    <br>
+
+    <h2>Sign-Up</h2>
+  <form id="sign-up">
+    <input placeholder="Enter Email" type="email" name="credentials[email]">
+    <br>
+    <input placeholder="Enter Password" type="password" name="credentials[password]">
+    <br>
+    <input placeholder="Confirm Password" type="password" name="credentials[password_confirmation]">
+    <br>
+    <button>Sign Up</button>
+  </form>
+
+<br>
+
+  <h2>Change Password</h2>
+  <form id="change-password">
+    <input placeholder="Enter Old Password" type="password" name="passwords[old]">
+    <br>
+    <input placeholder="Enter New Password" type="password" name="passwords[new]">
+    <br>
+    <button id="btnChangePassword">Change Password</button>
+   </form>
+  </div>
+
+  <br>
+
+  <div class='signOut'>
+    <form id="sign-out">
+      <button id='btnSignOut'>Sign Out</button>
+    </form>
+    <footer>
+  &copy; 2019
+</footer>
     </body>
 </html>
