--- a/index.html
+++ b/index.html
@@ -51,7 +51,38 @@
 
   <br>
 
-  <div class='signOut'>
+<h1>Tickets</h1>
+<p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having. </p>
+<br>
+<input type="date" id="date" name="date" value="yyyy-MM-dd">
+<br>
+<input placeholder="type of pc" type="text">
+<br>
+<input placeholder="model number" type="text">
+<br>
+<textarea placeholder="Tell us what issue you are experiencing in this box."rows="4" cols="50">
+</textarea>
+  <br>
+  <h1>View All Tickets</h1>
+  <br>
+  <button type="button" name="button">View All Tickets</button>
+  <br>
+  <h1>Update a Ticket</h1>
+  <br>
+  <input type="date" id="date" name="date" value="yyyy-MM-dd">
+  <br>
+  <input placeholder="id" type="text">
+  <br>
+  <textarea placeholder="Tell us what issue you are experiencing in this box."rows="4" cols="50">
+  </textarea>
+  <br>
+  <button type="button" name="button">Update a Ticket</button>
+  <br>
+  <h1>Remove a Ticket</h1>
+  <input placeholder="id" type="text">
+  <br>
+<button type="button" name="button">Remove a Ticket</button>
+<br>
     <form id="sign-out">
       <button id='btnSignOut'>Sign Out</button>
     </form>
