--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Tech Support</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Tech Support</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <!-- login page -->
-      <h1>Tech Support</h1>
-        <p id="message"></p>
-      <h2>Sign-In</h2>
-    <form id="sign-in">
-      <input placeholder="Enter Email" type="email" name="credentials[email]">
-      <br>
-      <input placeholder="Enter Password" type="password" name="credentials[password]">
-      <br>
-      <button id='btnSignIn'>Sign In</button>
-    </form>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <!-- login page -->
+  <h1>Tech Support</h1>
+  <p id="message"></p>
+  <h2>Sign-In</h2>
+  <form id="sign-in">
+    <input placeholder="Enter Email" type="email" name="credentials[email]">
     <br>
+    <input placeholder="Enter Password" type="password" name="credentials[password]">
+    <br>
+    <button id='btnSignIn'>Sign In</button>
+  </form>
 
-    <h2>Sign-Up</h2>
+  <br>
+
+  <h2>Sign-Up</h2>
   <form id="sign-up">
     <input placeholder="Enter Email" type="email" name="credentials[email]">
     <br>
@@ -37,7 +39,7 @@
     <button>Sign Up</button>
   </form>
 
-<br>
+  <br>
 
   <h2>Change Password</h2>
   <form id="change-password">
@@ -46,27 +48,27 @@
     <input placeholder="Enter New Password" type="password" name="passwords[new]">
     <br>
     <button id="btnChangePassword">Change Password</button>
-   </form>
+  </form>
   </div>
 
   <br>
 
-<!-- Ticket page -->
-<h1>Tickets</h1>
-<p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having. </p>
-<br>
+  <!-- Ticket page -->
+  <h1>Tickets</h1>
+  <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having. </p>
+  <br>
 
-<form id="create-ticket" action="index.html" method="post">
-<input type="date" id="date" name="date" value="yyyy-MM-dd">
-<br>
-<input placeholder="type of pc" type="text" name="tickets[type_of_pc]">
-<br>
-<input placeholder="model number" type="text" name="tickets[model_number]">
-<br>
-<textarea placeholder="Tell us what issue you are experiencing in this box."rows="4" cols="50">
+  <form id="create-ticket">
+    <input placeholder="date" type="text" name="tickets[date]">
+    <br>
+    <input placeholder="type of pc" type="text" name="tickets[type_of_pc]">
+    <br>
+    <input placeholder="model number" type="text" name="tickets[model_number]">
+    <br>
+    <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50">
 </textarea name="tickets[description]">
 <br>
-<button id="btnNewticket" type="button" name="button">Submit</button>
+<button id="btnNewticket">Submit</button>
 </form>
 
   <br>
@@ -75,8 +77,8 @@
 
   <br>
 
-<form id="get-tickets" action="index.html" method="post">
-  <button class="get-tickets" type="button" name="button">View All Tickets</button>
+<form id="get-tickets">
+  <button class="get-tickets">View All Tickets</button>
 </form>
 
   <br>
@@ -85,29 +87,32 @@
 
   <br>
 
-  <form id="update-ticket" action="index.html" method="post">
+  <form id="update-ticket">
   <input type="date" id="date" name="date" value="yyyy-MM-dd">
   <br>
   <input placeholder="id" type="text">
   <br>
   <textarea placeholder="Tell us what new issue you are experiencing in this box."rows="4" cols="50" name="tickets[description]">
   </textarea>
-  <br>
-  <button type="button" name="button">Update a Ticket</button>
+    <br>
+    <button>Update a Ticket</button>
   </form>
 
   <br>
 
   <h1>Remove a Ticket</h1>
-  <input placeholder="id" type="text">
+  <form id="delete-ticket">
+    <input placeholder="id" type="text">
+    <br>
+    <button id="removeTicket">Remove a Ticket</button>
+  </form>
   <br>
-<button type="button" name="button">Remove a Ticket</button>
-<br>
-    <form id="sign-out">
-      <button id='btnSignOut'>Sign Out</button>
-    </form>
-    <footer>
-  &copy; 2019
-</footer>
-    </body>
+  <form id="sign-out">
+    <button id='btnSignOut'>Sign Out</button>
+  </form>
+  <footer>
+    &copy; 2019
+  </footer>
+</body>
+
 </html>
