--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   <h1>Tickets</h1>
   <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having. </p>
   <br>
-
+<h1>Create Ticket</h1>
+<br>
   <form id="create-ticket">
     <input placeholder="date" type="text" name="tickets[date]">
     <br>
@@ -67,6 +68,8 @@
     <br>
     <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50">
 </textarea name="tickets[description]">
+<br>
+<!-- <input placeholder="user id" type="text" name="tickets[user_id]"> -->
 <br>
 <button id="btnNewticket">Submit</button>
 </form>
@@ -95,7 +98,7 @@
   <textarea placeholder="Tell us what new issue you are experiencing in this box."rows="4" cols="50" name="tickets[description]">
   </textarea>
     <br>
-    <button>Update a Ticket</button>
+    <button>Update Ticket</button>
   </form>
 
   <br>
