--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 <h1>Create Ticket</h1>
 <br>
   <form id="create-ticket">
-    <input placeholder="date" type="text" name="tickets[date]">
+    <input placeholder="date" type="text" name="ticket[date]">
     <br>
-    <input placeholder="type of pc" type="text" name="tickets[type_of_pc]">
+    <input placeholder="type of pc" type="text" name="ticket[type_of_pc]">
     <br>
-    <input placeholder="model number" type="text" name="tickets[model_number]">
+    <input placeholder="model number" type="text" name="ticket[model_number]">
     <br>
-    <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50">
-</textarea name="tickets[description]">
+    <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
+</textarea>
 <br>
 <!-- <input placeholder="user id" type="text" name="tickets[user_id]"> -->
 <br>
