--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
   <br>
 
   <form id="update-ticket">
-  <input type="date" id="date" name="date" value="yyyy-MM-dd">
+  <input placeholder="date" type="text" name="ticket[date]">
   <br>
   <input placeholder="id" type="text">
   <br>
-  <textarea placeholder="Tell us what new issue you are experiencing in this box."rows="4" cols="50" name="tickets[description]">
-  </textarea>
+  <textarea placeholder="Tell us what new issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
+</textarea>
     <br>
     <button>Update Ticket</button>
   </form>
