--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 <form id="get-tickets">
   <button class="get-tickets">View All Tickets</button>
 </form>
-
+<section>
+<div id="ticket-display"></div>
+</section>
   <br>
 
   <h1>Update a Ticket</h1>
