--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Tech Support</title>
+  <title>Help Desk Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -11,23 +10,40 @@
   <!-- Do not add `script` tags-->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
 </head>
 
 <body>
   <main>
+    <div class="container">
   <!-- login page -->
-  <h1>Tech Support</h1>
+  <h1>Help Desk Support</h1>
   <p id="message"></p>
-  <div class="signIn">
+  <!-- <div class="signIn">
   <h2>Sign-In</h2>
   <form id="sign-in">
     <input placeholder="Enter Email" type="email" name="credentials[email]">
     <br>
     <input placeholder="Enter Password" type="password" name="credentials[password]">
     <br>
-    <button id='btnSignIn'>Sign In</button>
+
+    <button id='btnSignIn' class="btn btn-dark">Sign In</button>
   </form>
-</div>
+</div> -->
+
+
+<form id="sign-in">
+  <div class="form-group">
+    <label for="Enter email">Email address</label>
+      <input placeholder="Enter Email" type="email" name="credentials[email]">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input placeholder="Enter Password" type="password" name="credentials[password]">
+  </div>
+  <button id='btnSignIn' class="btn btn-dark">Submit</button>
+</form>
+
   <br>
 
 <div class="signUp">
@@ -39,7 +55,8 @@
     <br>
     <input placeholder="Confirm Password" type="password" name="credentials[password_confirmation]">
     <br>
-    <button>Sign Up</button>
+    <!-- <button>Sign Up</button> -->
+    <button id='btnSignUp' class="btn btn-dark">Sign Up</button>
   </form>
 </div>
 
@@ -48,8 +65,11 @@
 <section class="ticketPage">
   <!-- Ticket page -->
   <h1>Tickets</h1>
-  <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having. </p>
+  <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having.</p>
+
   <br>
+
+<div class="createTicket">
 <h1>Create Ticket</h1>
 <br>
   <form id="create-ticket">
@@ -62,29 +82,27 @@
     <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
 </textarea>
 <br>
-<!-- <input placeholder="user id" type="text" name="tickets[user_id]"> -->
-<br>
 <button id="btnNewticket">Submit</button>
 </form>
+</div>
 
   <br>
 
+<div class="viewTickets">
   <h1>View All Tickets</h1>
-
   <br>
-
 <form id="get-tickets">
   <button class="get-tickets">View All Tickets</button>
 </form>
-<section>
+</div>
+
 <div id="ticket-display"></div>
 
   <br>
 
+<div class="updateTicket">
   <h1>Update a Ticket</h1>
-
   <br>
-
   <form id="update-ticket">
   <input placeholder="date" type="text" name="ticket[date]">
   <br>
@@ -95,15 +113,18 @@
     <br>
     <button>Update Ticket</button>
   </form>
+</div>
 
   <br>
 
+<div class="removeTicket">
   <h1>Remove a Ticket</h1>
   <form id="delete-ticket">
     <input placeholder="id" type="text" name=ticket[id]>
     <br>
     <button id="removeTicket">Remove a Ticket</button>
   </form>
+</div>
 
   <br>
 
@@ -118,13 +139,17 @@
     </form>
     </div>
 
+<div class="signOut">
   <form id="sign-out">
-    <button id='btnSignOut'>Sign Out</button>
+    <!-- <button id='btnSignOut'>Sign Out</button> -->
+    <button id='btnSignOut' class="btn btn-dark">Sign Out</button>
   </form>
+  </div>
 </section>
   <footer>
     &copy; 2019
   </footer>
+</div>
 </main>
 </body>
 </html>
