--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Help Desk Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,140 +17,136 @@
 <body>
   <main>
     <div class="container">
-  <!-- login page -->
-  <h1>Help Desk Support</h1>
-  <p id="message"></p>
-  <!-- <div class="signIn">
-  <h2>Sign-In</h2>
-  <form id="sign-in">
-    <input placeholder="Enter Email" type="email" name="credentials[email]">
-    <br>
-    <input placeholder="Enter Password" type="password" name="credentials[password]">
-    <br>
+  <!-- LOGIN PAGE -->
+    <!-- SIGN IN -->
+      <div class="sign_in_div">
+        <form id="sign-in">
+          <div class="form-group">
+            <label for="Enter email"></label>
+            <input class="form-control" placeholder="Enter Email" type="email" name="credentials[email]">
+          </div>
+          <div class="form-group">
+            <label for="password"></label>
+            <input id='enter-password' class="form-control" placeholder="Enter Password" type="password" name="credentials[password]">
+          </div>
+          <button id='btnSignIn' class="btn btn-dark">Sign In</button>
+        </form>
+      </div>
 
-    <button id='btnSignIn' class="btn btn-dark">Sign In</button>
-  </form>
-</div> -->
+      <p id="message"></p>
 
+      <h1>Help Desk Support</h1>
 
-<form id="sign-in">
-  <div class="form-group">
-    <label for="Enter email">Email address</label>
-      <input placeholder="Enter Email" type="email" name="credentials[email]">
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input placeholder="Enter Password" type="password" name="credentials[password]">
-  </div>
-  <button id='btnSignIn' class="btn btn-dark">Submit</button>
-</form>
+  <!-- SIGN UP -->
 
-  <br>
-
-<div class="signUp">
-<h2>Sign Up</h2>
-  <form id="sign-up">
-    <input placeholder="Enter Email" type="email" name="credentials[email]">
-    <br>
-    <input placeholder="Enter Password" type="password" name="credentials[password]">
-    <br>
-    <input placeholder="Confirm Password" type="password" name="credentials[password_confirmation]">
-    <br>
-    <!-- <button>Sign Up</button> -->
-    <button id='btnSignUp' class="btn btn-dark">Sign Up</button>
-  </form>
-</div>
-
-  <br>
-
-<section class="ticketPage">
-  <!-- Ticket page -->
-  <h1>Tickets</h1>
-  <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having.</p>
-
-  <br>
-
-<div class="createTicket">
-<h1>Create Ticket</h1>
-<br>
-  <form id="create-ticket">
-    <input placeholder="date" type="text" name="ticket[date]">
-    <br>
-    <input placeholder="type of pc" type="text" name="ticket[type_of_pc]">
-    <br>
-    <input placeholder="model number" type="text" name="ticket[model_number]">
-    <br>
-    <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
-</textarea>
-<br>
-<button id="btnNewticket">Submit</button>
-</form>
-</div>
-
-  <br>
-
-<div class="viewTickets">
-  <h1>View All Tickets</h1>
-  <br>
-<form id="get-tickets">
-  <button class="get-tickets">View All Tickets</button>
-</form>
-</div>
-
-<div id="ticket-display"></div>
-
-  <br>
-
-<div class="updateTicket">
-  <h1>Update a Ticket</h1>
-  <br>
-  <form id="update-ticket">
-  <input placeholder="date" type="text" name="ticket[date]">
-  <br>
-  <input placeholder="id" type="text" name=ticket[id]>
-  <br>
-  <textarea placeholder="Tell us what new issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
-</textarea>
-    <br>
-    <button>Update Ticket</button>
-  </form>
-</div>
-
-  <br>
-
-<div class="removeTicket">
-  <h1>Remove a Ticket</h1>
-  <form id="delete-ticket">
-    <input placeholder="id" type="text" name=ticket[id]>
-    <br>
-    <button id="removeTicket">Remove a Ticket</button>
-  </form>
-</div>
-
-  <br>
-
-  <div class="changePassword">
-    <h2>Change Password</h2>
-    <form id="change-password">
-      <input placeholder="Enter Old Password" type="password" name="passwords[old]">
-      <br>
-      <input placeholder="Enter New Password" type="password" name="passwords[new]">
-      <br>
-      <button id="btnChangePassword">Change Password</button>
-    </form>
+      <div class="sign_up_div">
+        <h2>Sign Up</h2>
+        <form id="sign-up">
+          <div class="form-group">
+            <label for="Enter email"></label>
+            <input id="sign-up-input" class="form-control" placeholder="Enter Email" type="email" name="credentials[email]">
+          </div>
+          <div class="form-group">
+            <label for="password"></label>
+            <input class="form-control" placeholder="Enter Password" type="password" name="credentials[password]">
+            <br>
+            <input class="form-control" placeholder="Confirm Password" type="password" name="credentials[password_confirmation]">
+            </div>
+            <button id='btnSignUp' class="btn btn-dark">Sign Up</button>
+        </form>
     </div>
 
-<div class="signOut">
-  <form id="sign-out">
-    <!-- <button id='btnSignOut'>Sign Out</button> -->
-    <button id='btnSignOut' class="btn btn-dark">Sign Out</button>
-  </form>
-  </div>
-</section>
-  <footer>
-    &copy; 2019
-  </footer>
-</div>
-</main>
+    <br>
+
+    <section class="ticketPage">
+      <!-- Ticket page -->
+      <h1>Tickets</h1>
+      <p>Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the issue you are having.</p>
+
+      <br>
+
+      <div class="createTicket">
+        <h1>Create Ticket</h1>
+        <br>
+        <form id="create-ticket">
+          <input placeholder="date" type="text" name="ticket[date]">
+          <br>
+          <input placeholder="type of pc" type="text" name="ticket[type_of_pc]">
+          <br>
+          <input placeholder="model number" type="text" name="ticket[model_number]">
+          <br>
+          <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
+</textarea>
+          <br>
+          <button id="btnNewticket">Submit</button>
+        </form>
+      </div>
+
+      <br>
+
+      <div class="viewTickets">
+        <h1>View All Tickets</h1>
+        <br>
+        <form id="get-tickets">
+          <button class="get-tickets">View All Tickets</button>
+        </form>
+      </div>
+
+      <div id="ticket-display"></div>
+
+      <br>
+
+      <div class="updateTicket">
+        <h1>Update a Ticket</h1>
+        <br>
+        <form id="update-ticket">
+          <input placeholder="date" type="text" name="ticket[date]">
+          <br>
+          <input placeholder="id" type="text" name=ticket[id]>
+          <br>
+          <textarea placeholder="Tell us what new issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
+</textarea>
+          <br>
+          <button>Update Ticket</button>
+        </form>
+      </div>
+
+      <br>
+
+      <div class="removeTicket">
+        <h1>Remove a Ticket</h1>
+        <form id="delete-ticket">
+          <input placeholder="id" type="text" name=ticket[id]>
+          <br>
+          <button id="removeTicket">Remove a Ticket</button>
+        </form>
+      </div>
+
+      <br>
+
+      <div class="changePassword">
+        <h2>Change Password</h2>
+        <form id="change-password">
+          <input placeholder="Enter Old Password" type="password" name="passwords[old]">
+          <br>
+          <input placeholder="Enter New Password" type="password" name="passwords[new]">
+          <br>
+          <button id="btnChangePassword">Change Password</button>
+        </form>
+      </div>
+
+      <div class="signOut">
+        <form id="sign-out">
+          <!-- <button id='btnSignOut'>Sign Out</button> -->
+          <button id='btnSignOut' class="btn btn-dark">Sign Out</button>
+        </form>
+      </div>
+    </section>
+    <footer>
+      &copy; 2019
+    </footer>
+    </div>
+  </main>
 </body>
+
 </html>
