--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
 <body>
   <main>
+
     <div class="container">
       <!-- ********** LOGIN PAGE ********** -->
       <div class="login-in-page">
         <!-- ********** SIGN IN FORM ********** -->
         <div class="sign_in_div">
           <form id="sign-in">
-            <h1>Help Desk Support</h1>
+            <h1 class="main-header">Help Desk Support</h1>
             <svg id="icon-mail" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
               <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6" />
             </svg>
@@ -74,35 +75,15 @@
         </div>
       </div>
 
-      <!-- ********** CHANGE PASSWORD FORM ********** -->
-      <div class="change_password_div">
-        <h2 class="change-password-header">Change Password</h2>
-        <form id="change-password">
-          <div class="form-group">
-            <label for="password"></label>
-            <!-- <svg id="icon-lock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-              <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23"/>
-              <circle cx="16" cy="24" r="1"/>
-            </svg> -->
-            <input id="" class="form-control input-field" placeholder="Password" type="password" name="passwords[old]">
-            <br>
-            <input id="" class="form-control input-field" placeholder="Confirm Password" type="password" name="passwrods[new]">
-          </div>
-          <br>
-          <button id="btn-change-password" class="btn btn-dark">Change Password</button>
-        </form>
-      </div>
-
       <!-- ********** TICKET PAGE ********** -->
       <section class="ticketPage">
-        <h1 class="tickets-header">Tickets</h1>
-        <p>Welcome to our help desk support! Please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are issuing the ticekt and a brief description of the
-          issue you are having.</p>
+        <h1 class="tickets-header">Help Desk Support</h1>
+        <p class="main-paragraph"><span>W</span>elcome to our help desk support! If you are experiencing issues with your computer please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are creating the ticket and a brief description of the issue you are having. We will get back to you promptly!</p>
 
         <br>
         <!-- ********** CREATE TICKET FORM ********** -->
         <div class="createTicket">
-          <h1 class="create-ticket-header">Create Ticket</h1>
+          <h1 class="create-ticket-header">Create A Ticket</h1>
           <br>
           <form id="create-ticket">
             <input placeholder="date" type="text" name="ticket[date]">
@@ -118,6 +99,7 @@
           </form>
         </div>
         <br>
+
         <!-- ********** VIEW ALL TICKETS FORM ********** -->
         <div class="viewTickets">
           <h1 class="view-all-tickets-header">View All Tickets</h1>
@@ -158,23 +140,27 @@
         </div>
 
         <!-- ********** CHANGE PASSWORD FORM ********** -->
-        <!-- <div class="change_password_div">
-          <h2 class="change-password-header">Change Password</h2>
+        <div class="change_password_div">
+        <h2 class="change-password-header">Change Password</h2>
           <form id="change-password">
             <div class="form-group">
               <label for="password"></label>
-              <svg id="icon-lock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+              <svg id="icon-lock-op" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                 <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23"/>
                 <circle cx="16" cy="24" r="1"/>
               </svg>
-        <input id="" class="form-control input-field" placeholder="Password" type="password" name="passwords[old]">
-        <br>
-        <input id="" class="form-control input-field" placeholder="Confirm Password" type="password" name="passwrods[new]">
-    </div>
-    <br>
-    <button id="btn-change-password" class="btn btn-dark">Change Password</button>
-    </form>
-    </div> -->
+              <input id="" class="form-control input-field-op" placeholder="Old Password" type="password" name="passwords[old]">
+              <br>
+              <svg id="icon-lock-np" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23"/>
+                <circle cx="16" cy="24" r="1"/>
+              </svg>
+              <input id="" class="form-control input-field-np" placeholder="New Password" type="password" name="passwords[new]">
+            </div>
+            <br>
+            <button id="btn-change-password" class="btn btn-dark">Change Password</button>
+          </form>
+        </div>
 
     <!-- ********** SIGN OUT FORM ********** -->
     <div class="signOut">
