--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </svg>
             <div class="form-group">
               <label for="Email"></label>
-              <input class="form-control" placeholder="Email" type="email" name="credentials[email]">
+              <input id='enter-email-input' class="form-control" placeholder="Email" type="email" name="credentials[email]">
             </div>
             <svg id="icon-lock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
               <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
@@ -149,13 +149,13 @@
             <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
             <circle cx="16" cy="24" r="1" />
           </svg>
-          <input id="" class="form-control input-field-op" placeholder="Old Password" type="password" name="passwords[old]">
+          <input id="old-pw-input" class="form-control input-field-op" placeholder="Old Password" type="password" name="passwords[old]">
           <br>
           <svg id="icon-lock-np" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
             <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
             <circle cx="16" cy="24" r="1" />
           </svg>
-          <input id="" class="form-control input-field-np" placeholder="New Password" type="password" name="passwords[new]">
+          <input id="new-pw-input" class="form-control input-field-np" placeholder="New Password" type="password" name="passwords[new]">
         </div>
         <br>
         <button id="btn-change-password" class="btn btn-dark">Change Password</button>
